@@ -29,6 +29,9 @@
 1.新功能:增加App升级功能
 2.新功能:增加游戏功能
 
+[yi-around-ad_1.0.0.1 2018-09-10 PeterZhang]
+1.新功能:增加登录功能
+
 --备注分类
 1、新功能：
 2、Bug:
